added sample code

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     </script>
   </head>
   <body>
+    <em>Sample Icon For Company</em>
       <aspen-nav-menu-item
       label="Companies"
       icon="aspen:domain"
